* Creating Swagger doc for Reservation * Info, Creating, Time reservation, Delete reservation
