# app/Http/Controllers/ReservationController.php
@@ -15,6 +15,7 @@ use App\Services\ResponseServices;
 use http\Env\Request;
 use Illuminate\Http\JsonResponse;
 use Illuminate\Support\Facades\Auth;
+use OpenApi\Annotations as OA;
 
 class ReservationController extends Controller
 {
@@ -23,6 +24,40 @@ class ReservationController extends Controller
                                 protected TableInfoRepostory $tableInfoRepo,
                                 protected ReservationTimeRepository $timeReservationRepo)
     {}
+
+    /**
+     * @OA\Post(
+     *     path="/api/reservation/",
+     *     summary="Creating reservation",
+     *     tags={"Tables"},
+     *     security={{"bearerAuth":{}}},
+     *     @OA\RequestBody(
+     *         required=true,
+     *     @OA\JsonContent(
+     *         required={"guest_number", "table_id"},
+     *      @OA\Property(property="guest_number", type="number", example=1),
+     *      @OA\Property(property="table_id", type="number", example=4)
+     *     )
+     *     ),
+     *     @OA\Response(
+     *         response=200,
+     *         description="Reservation has been created",
+     *     @OA\JsonContent(
+     *         @OA\Property(property="message", type="string", example="Your reservation is created successfully"),
+     *          @OA\Property(property="data", type="object")
+     *     )
+     *     ),
+     *     @OA\Response(
+     *         response=403,
+     *         description="You already have reservation or table is taken",
+     *     @OA\JsonContent(
+     *         @OA\Property(property="message", type="string", example="You already have reservation or this table is already taken")
+     *     )
+     *     ),
+     *
+     * )
+     *
+     */
     public function index(TableReservationRequest $request): JsonResponse
     {
         $user = Auth::user();
@@ -59,6 +94,20 @@ class ReservationController extends Controller
 
     }
 
+    /**
+     * @OA\Get(
+     *     path="/api/tables",
+     *     summary="Returns all tables",
+     *     tags={"Tables"},
+     *     @OA\Response(
+     *         response=200,
+     *         description="All tables with information"
+     *     )
+     * )
+     *
+     *
+     */
+
     public function info(): JsonResponse
     {
 
@@ -78,6 +127,49 @@ class ReservationController extends Controller
 
 
     }
+
+    /**
+     * @OA\Post(
+     *     path="/api/reservation/time/{name}",
+     *     summary="Adding time on reservation",
+     *     tags={"Tables"},
+     *     security={{"bearerAuth":{}}},
+     *     @OA\Parameter(
+     *         name="name",
+     *         in="path",
+     *         description="The ID of the user who has the reservation",
+     *         required=true,
+     *         @OA\Schema(
+     *          type="integer",
+     *          example=1
+     *      )
+     *     ),
+     *
+     *     @OA\RequestBody(
+     *         required=true,
+     *     @OA\JsonContent(
+     *         required={"reservation_date"},
+     *     @OA\Property(property="reservation_date", type="string", format="date-time", example="2025-07-08 15:00:00")
+     *     )
+     *     ),
+     *     @OA\Response(
+     *         response=200,
+     *         description="Successfully added time",
+     *     @OA\JsonContent(
+     *         @OA\Property(
+     *              property="message", type="string", example="Added time to your reservation")
+     *     )
+     *     ),
+     *     @OA\Response(
+     *         response=403,
+     *         description="Your reservation already has a set time or you don't have reservation!",
+     *       @OA\JsonContent(
+     *           @OA\Property(property="message", type="string")
+     *       )
+     *     )
+     * )
+     *
+     */
 
     public function time(TimeReservationRequest $request, User $name): JsonResponse
     {
@@ -103,6 +195,32 @@ class ReservationController extends Controller
 
 
     }
+
+    /**
+     * @OA\Delete(
+     *     path="/api/reservation/delete/{id}",
+     *     tags={"Tables"},
+     *     summary="Deleting reservation by table ID",
+     *     security={{"bearerAuth":{}}},
+     *     @OA\Parameter(
+     *         name="id",
+     *         in="path",
+     *         description="Deleting reservation for user who has reservation",
+     *         required=true,
+     *         @OA\Schema(
+     *             type="integer",
+     *             example=1
+     *         )
+     *     ),
+     *  @OA\Response(
+     *    response=200,
+     *    description="Successfully deleted reservation",
+     *     @OA\JsonContent(
+     *          @OA\Property(property="message", type="string", example="Your reservation has been deleted")
+     *          )  
+     *      )
+     * )
+     */
 
     public function delete($id)
     {
